<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to Home screen and Course list -->
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="registerButton">Register</string>
    <string name="dropButton">Drop</string>
    <string name="courseDetails">Details</string>
    <string name="courseTitle">Course # and Title</string>
    <string name="courseSemesterYear">Semester and Year</string>
    <string name="warning">No courses that match your query.</string>

    <!-- Strings for Drop Down to filter courses -->
    <string-array name="sorting_array">
        <item>" "</item>
        <item>Semester</item>
        <item>Course Level</item>
        <item>Department</item>
        <item>Required Courses</item>
    </string-array>

    <!-- Strings for Drop Down to filter Departments -->
    <string-array name="department_array">
        <item>Sociology</item>
        <item>Spanish</item>
    </string-array>

    <!-- Strings for Drop Down to filter Course Levels -->
    <string-array name="courseLevel_array">
        <item>1000s</item>
        <item>2000s</item>
        <item>3000s</item>
        <item>4000s</item>
    </string-array>

    <!-- Strings for Drop Down to filter Semesters -->
    <string-array name="semester_array">
        <item>Fall</item>
        <item>Winter</item>
    </string-array>

</resources>
